# dio-ml-ai-projects

./: .gitignore  2020_07_14_01_Cross_Validation.ipynb  README.md  catsvsdogs.ipynb  classificator.py  main.py  prepare copy.py  prepare.py  pyproject.toml  tf_data_alternativeimagedata.ipynb  trainmodel.py  transferlearningnapratica.ipynb
